jeg har lavet en h2 hvor der står Mad og drikkevarer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hej med dig CC</CC:ie></h1>
+    <h1>Hej med dig CC</h1>
+    <h2>Mad og drikkevarer</h2>
 </body>
 </html>
