--- a/index.html
+++ b/index.html
@@ -3,11 +3,135 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/c9d62a50e6.js" crossorigin="anonymous"></script>
+    <title>Burgerr Og Drikke</title>
 </head>
+
 <body>
-    <h1>Hej med dig CC</h1>
-    <h2>Mad og drikkevarer</h2>
-    <img src="img/image.png">
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html"><i class="fa-solid fa-house"></i></a></li>
+                <li><a href="index.html">Burger og Dirkkevarer</a></li>
+                <li><a href="#"><i class="fa-solid fa-bars"></i></a></li>
+            </ul>
+        </nav>
+    </header>
+
+<main>
+
+    <section class="hero"> <!-- CSS -->
+        <h1>Burgere og drikke</h1>
+        <p>Velkommen til vores restaurant</p>
+        <a href="#">Book tid nu!</a>
+    </section>
+    
+    <section class="introduktion">
+        <p>Vi har et stort udvalg af burgere og drikkevarer. Vi har noget for enhver smag. Vi har også vegetariske og veganske muligheder.</p>
+    </section>
+
+    <section class="burger-menu">
+        <h2>Burgere</h2>
+        <div class="fremhævet-menuer">
+            <article> <!-- CSS -->
+                <h3>Cheeseburger</h3>
+                <h4>Pris:</h4>
+                <p>50 kr.</p>
+            </article>
+            <article> <!-- CSS -->
+                <h3>Kylligeburger</h3>
+                <h4>Pris:</h4>
+                <p>50 kr.</p>
+            </article>
+            <article> <!-- CS -->
+                <h3>Hamburger</h3>
+                <h4>Pris:</h4>
+                <p>30 kr.</p>
+            </article>
+            <article> <!-- CS -->
+                <h3>Spicy Burger</h3>
+                <h4>Pris:</h4>
+                <p>70 kr.</p>
+            </article>
+    </section>
+
+    <section class="drikkevare-menu">
+        <h2>Burgere</h2>
+        <div class="fremhævet-menuer">
+            <article> <!-- CSS -->
+                <h3>Coca Cola</h3>
+                <h4>Pris:</h4>
+                <p>20 kr.</p>
+            </article>
+            <article> <!-- CSS -->
+                <h3>Fanta</h3>
+                <h4>Pris:</h4>
+                <p>20 kr.</p>
+            </article>
+            <article> <!-- CS -->
+                <h3>Blueberry</h3>
+                <h4>Pris:</h4>
+                <p>30 kr.</p>
+            </article>
+            <article> <!-- CS -->
+                <h3>Danskvand</h3>
+                <h4>Pris:</h4>
+                <p>20 kr.</p>
+            </article>
+    </section>
+
+    <section class="tilbehør-menu">
+        <h2>Burgere</h2>
+        <div class="fremhævet-menuer">
+            <article> <!-- CSS -->
+                <h3>Pommes frities</h3>
+                <h4>Pris:</h4>
+                <p>30 kr.</p>
+            </article>
+            <article> <!-- CSS -->
+                <h3>Salat</h3>
+                <h4>Pris:</h4>
+                <p>40 kr.</p>
+            </article>
+            <article> <!-- CS -->
+                <h3>Fisk</h3>
+                <h4>Pris:</h4>
+                <p>40 kr.</p>
+            </article>
+            <article> <!-- CS -->
+                <h3>Chips</h3>
+                <h4>Pris:</h4>
+                <p>15 kr.</p>
+            </article>
+    </section>
+
+</main>
+    
+<footer>
+    <p>&copy; 2025, alle rettigheder beholdes ved Villads Otto Rasmussen & Carl Christian Sørensen</p>
+    <article class="contact-info">
+        <h4>Kontakt os</h4>
+        <p>Email: <a href="mailto:villadsrasmussen1@gmail.com">info@restaurant.dk</a></p>
+        <p>Telefon: <a href="tel:+4512345678">+45 1234 5678</a></p>
+    </article>
+    <article class="opening-hours">
+        <h4>Åbningstider</h4>
+        <p>Mandag - Fredag: 10:00 - 22:00</p>
+        <p>Lørdag - Søndag: 12:00 - 24:00</p>
+    </article>
+    <article class="location">
+        <h4>Find os</h4>
+        <p>Adresse: Hovedgaden 123, 4000 Roskilde, Danmark</p>
+    </article>
+    <nav>
+        <ul>
+            <li><a href="privacy.html">Privatlivspolitik</a></li>
+            <li><a href="terms.html">Servicevilkår</a></li>
+            <li><a href="contact.html">Kontakt os</a></li>
+        </ul>
+    </nav>
+</footer>
+
 </body>
 </html>
