Tilføjet nye CSS-stilarter og opdateret HTML-struktur for at forbedre layout og design af menuen

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/c9d62a50e6.js" crossorigin="anonymous"></script>
     <title>Burgerr Og Drikke</title>
 </head>
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href="index.html"><i class="fa-solid fa-house"></i></a></li>
-                <li><a href="index.html">Burger og Dirkkevarer</a></li>
+                <li class="logo"><a href="index.html">Burger og Dirkkevarer</a></li>
                 <li><a href="#"><i class="fa-solid fa-bars"></i></a></li>
             </ul>
         </nav>
@@ -22,8 +22,7 @@
 <main>
 
     <section class="hero"> <!-- CSS -->
-        <h1>Burgere og drikke</h1>
-        <p>Velkommen til vores restaurant</p>
+        <h1>Velkommen til vores restaurant</h1>
         <a href="#">Book tid nu!</a>
     </section>
     
@@ -31,75 +30,87 @@
         <p>Vi har et stort udvalg af burgere og drikkevarer. Vi har noget for enhver smag. Vi har også vegetariske og veganske muligheder.</p>
     </section>
 
-    <section class="burger-menu">
+    <section class="menu">
         <h2>Burgere</h2>
-        <div class="fremhævet-menuer">
+        <div class="fremhævet-menu">
             <article> <!-- CSS -->
+                <img src="img/Cheeseburger.webp" alt="Cheeseburger">
                 <h3>Cheeseburger</h3>
                 <h4>Pris:</h4>
                 <p>50 kr.</p>
             </article>
             <article> <!-- CSS -->
+                <img src="img/kyllingeburger.webp" alt="Kyllingeburger">
                 <h3>Kylligeburger</h3>
                 <h4>Pris:</h4>
                 <p>50 kr.</p>
             </article>
             <article> <!-- CS -->
+                <img src="img/hamburger.jpg" alt="Hamburger">
                 <h3>Hamburger</h3>
                 <h4>Pris:</h4>
                 <p>30 kr.</p>
             </article>
             <article> <!-- CS -->
+                <img src="img/spicy_burger.avif" alt="Spicy Burger">
                 <h3>Spicy Burger</h3>
                 <h4>Pris:</h4>
                 <p>70 kr.</p>
             </article>
     </section>
 
-    <section class="drikkevare-menu">
-        <h2>Burgere</h2>
-        <div class="fremhævet-menuer">
+    <section class="menu">
+        <h2>Drikkevarer</h2>
+        <div class="fremhævet-menu">
             <article> <!-- CSS -->
+                <img src="img/coca_cola.jpg" alt="Coca Cola">
                 <h3>Coca Cola</h3>
                 <h4>Pris:</h4>
                 <p>20 kr.</p>
             </article>
             <article> <!-- CSS -->
+                <img src="img/fanta.jpeg" alt="Fanta">
                 <h3>Fanta</h3>
                 <h4>Pris:</h4>
                 <p>20 kr.</p>
             </article>
             <article> <!-- CS -->
+                <img src="img/blueberry_drik.webp" alt="Blueberry">
                 <h3>Blueberry</h3>
                 <h4>Pris:</h4>
                 <p>30 kr.</p>
             </article>
             <article> <!-- CS -->
+                <img src="img/danskvand.jpg" alt="Danskvand">
                 <h3>Danskvand</h3>
                 <h4>Pris:</h4>
                 <p>20 kr.</p>
             </article>
     </section>
 
-    <section class="tilbehør-menu">
-        <h2>Burgere</h2>
-        <div class="fremhævet-menuer">
+    <section class="menu">
+        <h2>Tilbehør</h2>
+        <div class="fremhævet-menu">
             <article> <!-- CSS -->
-                <h3>Pommes frities</h3>
+                <img src="img/pommes-frites.webp" alt="Pommes Fritter">
+                <h3>Pommes</h3>
                 <h4>Pris:</h4>
                 <p>30 kr.</p>
             </article>
             <article> <!-- CSS -->
+                <img src="img/salat.jpg" alt="Salat">
                 <h3>Salat</h3>
                 <h4>Pris:</h4>
                 <p>40 kr.</p>
             </article>
             <article> <!-- CS -->
-                <h3>Fisk</h3>
+                <img src="img/fisk.avif" alt="Fisk">
+                <h3>Fisk</h4>
                 <h4>Pris:</h4>
                 <p>40 kr.</p>
             </article>
             <article> <!-- CS -->
+                <img src="img/chips.webp" alt="Chips">
                 <h3>Chips</h3>
                 <h4>Pris:</h4>
                 <p>15 kr.</p>
@@ -109,7 +120,7 @@
 </main>
     
 <footer>
-    <p>&copy; 2025, alle rettigheder beholdes ved Villads Otto Rasmussen & Carl Christian Sørensen</p>
+    <p id="copyright">&copy; 2025, alle rettigheder beholdes ved Villads Otto Rasmussen & Carl Christian Sørensen</p>
     <article class="contact-info">
         <h4>Kontakt os</h4>
         <p>Email: <a href="mailto:villadsrasmussen1@gmail.com">info@restaurant.dk</a></p>
